### CHANGELOG FORMAT:
yyyy-mm-dd Your Name <your@email.com>
	* file ( method in file ) : changes.
###

2019-03-08 Inge Wortel <ingewortel@gmail.com>
	* CPM.js : wrapped grid.neighi as an internal function here.
	* hamiltonian/ActivityConstraint.js : Added this file.
	* app/index.js : added Activity Constraint to the build.
	* Canvas.js : fixed code for displaying the activity model
	* examples/actmodel.html : added an example with act model (this doesn't work
	properly yet, as the cell needs a perimeter constraint to stay together).

2019-03-08 Johannes Textor <johannes.textor@gmx.de>
	* CPM.js : added listener stubs for pixel changes and MCS termination
	* TestLogger.js : new file for simple logging of events, to check if
	this works

2019-03-08 Inge Wortel <ingewortel@gmail.com>
	* Makefile : changed call to rollup to a direct call to the rollup binary in 
	node_modules, so it doesn't require a global install.
	* hamiltonian/SoftConstraint.js : fixed typo in filename. 
	* hamiltonian/SoftConstraint.js ( deltaH ) : Disabled eslint error on unused variables
	for this method. 
	* hamiltonian/HardConstraint.js ( fulfilled ): Disabled eslint error on unused variables
	for this  method. 