@@ -1,13 +1,9 @@
 
-class SoftConstraint {
+import Constraint from "./Constraint.js"
+
+class SoftConstraint extends Constraint {
 	get CONSTRAINT_TYPE() {
 		return "soft"
-	}
-	constructor( conf ){
-		this.conf = conf
-	}
-	set CPM(C){
-		this.C = C
 	}
 	// eslint-disable-next-line no-unused-vars
 	deltaH( src_i, tgt_i, src_type, tgt_type ){
